feat: restructure application with routing and content management
- Added react-router-dom for routing capabilities.
- Implemented ContentPage component to display content based on URL slug.
- Created ContentAccordion and ModuleAccordion components for better content organization.
- Removed unused ThemeAccordion and ModuleAccordion components.
- Updated menuData.js to include new content structure and objectives.
- Removed App.css and replaced it with styled components for better maintainability.
- Added new styles for ContentPage and updated global styles in index.css.
- Introduced slugify function for URL-friendly titles.
- Enhanced Markdown rendering with improved styles and structure.

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,26 +1,46 @@
 :root {
+  --font-main: "Questrial", sans-serif;
+
   --dark-mode-background: #282c35;
   --dark-mode-font-color: #ffffff;
+  --dark-mode-content-bg: #343943;
+
+  --light-mode-background: #e4e4e4;
+  --light-mode-font-color: #000000;
+  --light-mode-content-bg: #ebebeb;
 
   --current-bg: var(--dark-mode-background);
   --current-font: var(--dark-mode-font-color);
+  --current-content-bg: var(--dark-mode-content-bg);
 }
 
 body.theme-light {
-  --light-mode-background: #ffffff;
-  --light-mode-font-color: #000000;
-
   --current-bg: var(--light-mode-background);
   --current-font: var(--light-mode-font-color);
+  --current-content-bg: var(--light-mode-content-bg);
 }
 
 body {
   transition: background-color 0.3s ease, color 0.3s ease;
   background-color: var(--current-bg);
   color: var(--current-font);
+  font-family: var(--font-main);
 }
 
 .menu-button {
   background-color: var(--current-bg);
   color: var(--current-font);
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
