--- a/web/src/assets/styles/ContentPage.scss
+++ b/web/src/assets/styles/ContentPage.scss
@@ -19,6 +19,7 @@
     background-color: var(--current-content-bg);
     padding: 2rem;
     border-radius: 12px;
+    min-height: 75vh;
 
     h1,
     h2,
